--- a/assets/css/utilities/_variables.scss
+++ b/assets/css/utilities/_variables.scss
@@ -1,10 +1,11 @@
 //COLORS
-$primary:             #5a46ff;
+$primary:             #6C5CFF;
 $primary-light:       lighten($primary,20%);
 $primary-lighter:     lighten($primary,30%);
-$secondary:           #161618;
-$secondary-light:     #9a9a9a;
-$secondary-lighter:   #e4e4e4;
+$secondary:           #030303;
+$secondary-light:     #161618;
+$secondary-lighter:   #767676;
+$secondary-super-lighter:   #e4e4e4;
 $background-primary:  #FFFFFF;
 $background-primary-darker:  #F6F7FB;
 $background-secondary:$secondary;
